--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.10",
     "gatsby": "^2.7.3",
     "gatsby-image": "^2.1.1",
+    "gatsby-plugin-emotion": "^4.0.7",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.1.1",
     "gatsby-plugin-typography": "^2.2.13",
-    "gatsby-source-filesystem": "^2.0.37",
+    "gatsby-source-filesystem": "^2.0.39",
+    "gatsby-transformer-json": "^2.1.11",
+    "gatsby-transformer-remark": "^2.4.0",
     "gatsby-transformer-sharp": "^2.1.19",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
