Add dates to projects

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,5 +1,25 @@
 [
   {
+    "title": "Courageous Parents Network",
+    "url": "https://courageousparentsnetwork.org",
+    "description": "A site I have been working on for over 5 years",
+    "slug": "courageous-parents-network",
+    "images": ["Z_cpn_home.png"]
+  },
+  {
+    "title": "Sutton Place Chiropractic",
+    "url": "https://suttonplacechiropractic.com",
+    "description": "This site was blah blah blah.  My Chiropractor",
+    "slug": "sutton-place-chiro"
+  },
+  {
+    "title": "TXC Entertainment",
+    "url": "https://txcentertainment.com",
+    "description": "This site was blah blah blah.  The Film Score website of Tanis Chalopin",
+    "slug": "txc-entertainment",
+    "date": "December, 2017"
+  },
+  {
     "title": "Dustin Grella Animation Studio",
     "url": "https://dustystudio.com",
     "description": "This site was blah blah blah My friend Dusty",
@@ -9,43 +29,34 @@
       "Z_dusty_work.png",
       "Z_dusty_work_detail.png",
       "Z_dusty_animation_hotline.png"
-    ]
+    ],
+    "date": "August, 2016"
   },
   {
-    "title": "Courageous Parents Network",
-    "url": "https://courageousparentsnetwork.org",
-    "description": "A site I have been working on for over 5 years",
-    "slug": "courageous-parents-network",
-    "images": ["Z_cpn_home.png"]
-  },
-  {
-    "title": "I Make Stuff for Fun",
-    "url": "https://imakestuffforfun.com",
-    "description": "This site was blah blah blah Some old Deadhead",
-    "slug": "i-make-stuff-for-fun"
+    "title": "Tanis",
+    "url": "https://tanis.world",
+    "description": "A site built for the French Language pop star, Tanis Chalopin",
+    "slug": "tanis",
+    "date": "April, 2016"
   },
   {
     "title": "Structures of Coastal Resilience",
     "url": "http://structuresofcoastalresilience.org",
     "description": "This site was blah blah blah.  An organization that maps the changes of our coastline",
-    "slug": "structures-of-coastal-resilience"
+    "slug": "structures-of-coastal-resilience",
+    "date": "October, 2014"
   },
   {
-    "title": "Sutton Place Chiropractic",
-    "url": "https://suttonplacechiropractic.com",
-    "description": "This site was blah blah blah.  My Chiropractor",
-    "slug": "sutton-place-chiro"
+    "title": "I Make Stuff for Fun",
+    "url": "https://imakestuffforfun.com",
+    "description": "This site was blah blah blah Some old Deadhead",
+    "slug": "i-make-stuff-for-fun",
+    "date": "July, 2014"
   },
   {
-    "title": "Tanis",
-    "url": "https://tanis.world",
-    "description": "A site built for the French Language pop start Tanis Chalopin",
-    "slug": "tanis"
-  },
-  {
-    "title": "TXC Entertainment",
-    "url": "https://txcentertainment.com",
-    "description": "This site was blah blah blah.  The Film Score website of Tanis Chalopin",
-    "slug": "txc-entertainment"
+    "title": "Hexagon Properties / Motherlode Aspen",
+    "url": "http://motherloadeaspen.com",
+    "description": "Website and branding elements",
+    "date": "February, 2014"
   }
 ]
