--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
-    "typography-theme-kirkham": "^0.16.19"
+    "typography-theme-kirkham": "^0.16.19",
+    "typography-theme-stern-grove": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.17.1"
