Add device images and structure projects

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-slick": "^0.25.2",
     "react-typography": "^0.16.19",
+    "slick-carousel": "^1.8.1",
     "typography": "^0.16.19",
     "typography-theme-kirkham": "^0.16.19",
     "typography-theme-stern-grove": "^0.16.19"
